<?xml version="1.0"?>
<package>
  <name>trilateration</name>
  <version>0.0.0</version>
  <description>The trilateration package</description>
  <maintainer email="kimdh@todo.todo">kimdh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <!--build_depend>realtime_tools</build_depend-->

  <run_depend>message_runtime</run_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_extras</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <!--run_depend>realtime_tools</run_depend-->


  <export>

  </export>
</package>

